[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game_Utils/Scripts/Enemy2_Behaviour.gd" type="Script" id=1]
[ext_resource path="res://Game_Utils/Assets/Imports/PNG/Enemies/enemyBlack1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 408.018

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="area_to_damaged" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area_to_damaged"]
rotation = -1.5708
polygon = PoolVector2Array( -11.1307, -33.9285, -29.5093, -42.0213, -46.6795, -16.4044, -24.8602, 42.6305, -10.913, 37.594, -17.89, 11.6341, -14.8859, 9.63132, -12.4627, 15.8983, 11.3638, 16.4794, 14.905, 9.63132, 17.1581, 10.132, 10.7826, 37.594, 24.3424, 42.4368, 46.949, -16.1541, 29.425, -41.9395, 10.1485, -33.4278, 9.39748, -24.1651, -7.6259, -23.6644 )

[node name="area_to_IA" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_to_IA"]
shape = SubResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -11.1307, -33.9285, -29.5093, -42.0213, -46.6795, -16.4044, -24.8602, 42.6305, -10.913, 37.594, -17.89, 11.6341, -14.8859, 9.63132, -12.4627, 15.8983, 11.3638, 16.4794, 14.905, 9.63132, 17.1581, 10.132, 10.7826, 37.594, 24.3424, 42.4368, 46.949, -16.1541, 29.425, -41.9395, 10.1485, -33.4278, 9.39748, -24.1651, -7.6259, -23.6644 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="area_entered" from="area_to_damaged" to="." method="_on_area_to_damaged_area_entered"]
[connection signal="body_entered" from="area_to_damaged" to="." method="_on_area_to_damaged_body_entered"]
[connection signal="body_entered" from="area_to_IA" to="." method="_on_area_to_IA_body_entered"]
[connection signal="body_exited" from="area_to_IA" to="." method="_on_area_to_IA_body_exited"]
[connection signal="ready" from="Timer" to="." method="_on_Timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
